src/snapshots/porc__porc_app__test__more_complicated_tree.snap
---
source: src/porc_app.rs
expression: render_ui(app)
---
     p͟i͟d͟   cpu       ram ┃ executable                                           
━━━━━━━━━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
       1   25%       0MB ┃ ▶ one                                                
       2    5%       0MB ┃   ├─┬ two                                            
       3    3%       0MB ┃   │ └── three                                        
       4   19%       0MB ┃   └─┬ four                                           
       5    5%       0MB ┃     ├── five                                         
       6   10%       0MB ┃     └─┬ six                                          
       7    5%       0MB ┃       └── seven                                      
C͟t͟r͟l͟+͟C͟:͟ ͟Q͟u͟i͟t͟ ͟|͟ ͟↑͟↓͟ ͟:͟ ͟s͟c͟r͟o͟l͟l͟ ͟|͟ ͟E͟N͟T͟E͟R͟:͟ ͟s͟e͟l͟e͟c͟t͟ ͟p͟r͟o͟c͟e͟s͟s͟ ͟|͟ ͟/͟:͟ ͟f͟i͟l͟t͟e͟r͟ ͟p͟r͟o͟c͟e͟s͟s͟e͟s͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟
