src/snapshots/porc__porc_app__test__processes_can_be_sorted_by_pid.snap
---
source: src/porc_app.rs
expression: render_ui(app)
---
    [͟p͟i͟d͟]͟  cpu       ram ┃ executable   
━━━━━━━━━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━
 ͟ ͟ ͟ ͟ ͟ ͟ ͟1͟ ͟ ͟ ͟ ͟1͟%͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟0͟M͟B͟ ͟┃͟ ͟o͟n͟e͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟
       2    2%       0MB ┃ two          
       3    4%       0MB ┃ three        
       4    3%       0MB ┃ four         
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
C͟t͟r͟l͟+͟C͟:͟ ͟Q͟u͟i͟t͟ ͟|͟ ͟↑͟↓͟ ͟:͟ ͟s͟c͟r͟o͟l͟l͟ ͟|͟ ͟E͟N͟T͟E͟R͟:͟ ͟s͟e͟l͟e͟
