src/snapshots/porc__porc_app__test__processes_get_sorted_by_cpu_usage.snap
---
source: src/porc_app.rs
expression: tree
---
       2    4%       0MB ┃ two
       1    3%       0MB ┃ one
       3    2%       0MB ┃ three
       4    1%       0MB ┃ four
