src/snapshots/porc__porc_app__test__shows_a_tree_with_header_and_side_columns.snap
---
source: src/porc_app.rs
expression: render_ui(app)
---
     pid  [͟c͟p͟u͟]͟      ram ┃ executable   
━━━━━━━━━━━━━━━━━━━━━━━━━╋━━━━━━━━━━━━━━
 ͟ ͟ ͟ ͟ ͟ ͟ ͟1͟ ͟ ͟ ͟ ͟9͟%͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟0͟M͟B͟ ͟┃͟ ͟o͟n͟e͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟ ͟
       2    5%       0MB ┃ └─┬ two      
       3    2%       0MB ┃   └── three  
       4    1%       0MB ┃ four         
       5    0%       0MB ┃ └── five     
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
                                        
C͟t͟r͟l͟+͟C͟:͟ ͟Q͟u͟i͟t͟ ͟|͟ ͟↑͟↓͟ ͟:͟ ͟s͟c͟r͟o͟l͟l͟ ͟|͟ ͟E͟N͟T͟E͟R͟:͟ ͟s͟e͟l͟e͟
